Fix directory traversal exploits in Rack::File and Rack::Directory

--- a/README
+++ b/README
@@ -224,6 +224,9 @@ run on port 11211) and memcache-client installed.
   * Made HeaderHash case-preserving.
   * Many bugfixes and small improvements.
 
+* January 9th, 2009: Sixth public release 0.9.1.
+  * Fix directory traversal exploits in Rack::File and Rack::Directory.
+
 == Contact
 
 Please mail bugs, suggestions and patches to
@@ -258,8 +261,9 @@ would like to thank:
 * Tim Fletcher, for the HTTP authentication code.
 * Luc Heinrich for the Cookie sessions, the static file handler and bugfixes.
 * Armin Ronacher, for the logo and racktools.
-* Aredridel, Ben Alpert, Dan Kubb, Daniel Roethlisberger, Matt Todd, and
-  Phil Hagelberg for bug fixing and other improvements.
+* Aredridel, Ben Alpert, Dan Kubb, Daniel Roethlisberger, Matt Todd,
+  Tom Robinson, and Phil Hagelberg for bug fixing and other
+  improvements.
 * Stephen Bannasch, for bug reports and documentation.
 * Gary Wright, for proposing a better Rack::Response interface.
 * Jonathan Buch, for improvements regarding Rack::Response.
